--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -16,7 +16,12 @@
     "- [Introduction](#introduction)\n",
     "- [Objectives](#objectives)\n",
     "- [Data Source and Structure](#data-source-and-structure)\n",
-    "  - [Dataset Variables](#dataset-variables)"
+    "  - [Dataset Variables](#dataset-variables)\n",
+    "- [Data Collection and Preprocessing](#data-collection-and-preprocessing)\n",
+    "  - [Import Necessary Libraries](#import-necessary-libraries)\n",
+    "  - [Function Declarations](#function-declarations)\n",
+    "  - [Data Import and Initial Exploration](#data-import-and-initial-exploration)\n",
+    "- [Data Transformation](#data-transformation)"
    ]
   },
   {
@@ -106,6 +111,74 @@
     "- **population_prov_vs_national_%**: Percentage of the population in the province compared to the national total.\n",
     "- **renta_media_prov**: Average income in the province."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Collection and Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Necessary Libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Modules**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Scripts**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('scripts')\n",
+    "from graphins import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pandas Settings**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set Pandas to Display All Columns\n",
+    "pd.set_option('display.max_columns', None)"
+   ]
   }
  ],
  "metadata": {
@@ -115,7 +188,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
