--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "renta_media_prov                                                         19889.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -876,6 +876,45 @@
    "metadata": {},
    "source": [
     "The dataset consists of **100,000 entries** and **41 columns**. The data types include `object`, `float64`, and `int64`. Several columns contain missing values. The dataset occupies **31.3 MB** in memory, making it manageable for analysis. This initial exploration highlights the need for data cleaning, especially in columns with a high proportion of missing values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Filtering\n",
+    "We remove the variables that will not be used in this analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data.drop(columns=['ad_description', \n",
+    "                       'ad_last_update', \n",
+    "                       'house_id', \n",
+    "                       'obtention_date', \n",
+    "                       'unfurnished',\n",
+    "                       'number_of_companies_prov', \n",
+    "                       'population_prov', \n",
+    "                       'companies_prov_vs_national_%', \n",
+    "                       'population_prov_vs_national_%',\n",
+    "                       'renta_media_prov',\n",
+    "                       'energetic_certif',\n",
+    "                       'loc_district',\n",
+    "                       'floor',\n",
+    "                       'reduced_mobility',\n",
+    "                       'balcony',\n",
+    "                       'built_in_wardrobe'], inplace=True)"
    ]
   }
  ],
