fix_data_filtering_text

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -890,7 +890,7 @@
    "metadata": {},
    "source": [
     "### Data Filtering\n",
-    "We remove the variables that will not be used in this analysis."
+    "Remove the variables that will not be used in this analysis."
    ]
   },
   {
