Handling_missing-data

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -966,6 +966,69 @@
     "verify_duplicated = raw_data[raw_data.duplicated(keep=False)]\n",
     "print(verify_duplicated)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling Missing Data and Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ground_size       93928\n",
+      "kitchen           91902\n",
+      "loc_street        80147\n",
+      "heating           69857\n",
+      "construct_date    63150\n",
+      "orientation       56789\n",
+      "garage            56130\n",
+      "loc_neigh         52086\n",
+      "m2_useful         44501\n",
+      "lift              38965\n",
+      "condition         13295\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Missing data sorted.\n",
+    "missing_values = raw_data.isnull().sum().sort_values(ascending=False)\n",
+    "print(missing_values[missing_values > 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Many variables in the dataset contain a significant amount of missing data. Upon closer investigation, it is possible that these are **structural missing values** in categorical variables and should be replaced with 0. This adjustment will be further analyzed in the following sections.\n",
+    "\n",
+    "Other variables with a large amount of missing data **(more than 60%)** that should have values in all records will be removed from the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data.drop(columns=['ground_size', \n",
+    "                       'kitchen', \n",
+    "                       'loc_street', \n",
+    "                       'heating',\n",
+    "                       'construct_date',\n",
+    "                       'orientation',\n",
+    "                       'loc_neigh',\n",
+    "                       'm2_useful',\n",
+    "                       'lift'], inplace=True)"
+   ]
   }
  ],
  "metadata": {
