--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1041,8 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**air_conditioner**  \n",
-    "No missing values. "
+    "**condition**"
    ]
   },
   {
@@ -1053,14 +1052,192 @@
     {
      "data": {
       "text/plain": [
-       "air_conditioner\n",
-       "0                  71158\n",
-       "1                  22770\n",
-       "air_conditioner        1\n",
+       "condition\n",
+       "segunda mano/buen estado      67899\n",
+       "segunda mano/para reformar    10457\n",
+       "promoción de obra nueva        2277\n",
+       "condition                         1\n",
        "Name: count, dtype: int64"
       ]
      },
      "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['condition'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_conditioner</th>\n",
+       "      <th>bath_num</th>\n",
+       "      <th>chimney</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>garage</th>\n",
+       "      <th>garden</th>\n",
+       "      <th>house_type</th>\n",
+       "      <th>loc_city</th>\n",
+       "      <th>loc_full</th>\n",
+       "      <th>loc_zone</th>\n",
+       "      <th>m2_real</th>\n",
+       "      <th>price</th>\n",
+       "      <th>room_num</th>\n",
+       "      <th>storage_room</th>\n",
+       "      <th>swimming_pool</th>\n",
+       "      <th>terrace</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4248</th>\n",
+       "      <td>air_conditioner</td>\n",
+       "      <td>bath_num</td>\n",
+       "      <td>chimney</td>\n",
+       "      <td>condition</td>\n",
+       "      <td>garage</td>\n",
+       "      <td>garden</td>\n",
+       "      <td>house_type</td>\n",
+       "      <td>loc_city</td>\n",
+       "      <td>loc_full</td>\n",
+       "      <td>loc_zone</td>\n",
+       "      <td>m2_real</td>\n",
+       "      <td>price</td>\n",
+       "      <td>room_num</td>\n",
+       "      <td>storage_room</td>\n",
+       "      <td>swimming_pool</td>\n",
+       "      <td>terrace</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      air_conditioner  bath_num  chimney  condition  garage  garden  \\\n",
+       "4248  air_conditioner  bath_num  chimney  condition  garage  garden   \n",
+       "\n",
+       "      house_type  loc_city  loc_full  loc_zone  m2_real  price  room_num  \\\n",
+       "4248  house_type  loc_city  loc_full  loc_zone  m2_real  price  room_num   \n",
+       "\n",
+       "      storage_room  swimming_pool  terrace  \n",
+       "4248  storage_room  swimming_pool  terrace  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data[raw_data['condition'] == 'condition']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A value equal to the header was detected, likely due to a row left over after removing duplicates. This row probably originates from instances where column names were repeated at regular intervals in the dataframe. It will be removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data.drop(raw_data[raw_data['condition'] == 'condition'].index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With 13,319 missing records in this variable, we deduce that the data were not recorded because they were irrelevant to buyers. This suggests that the properties are neither newly constructed nor in need of renovation, so it can be inferred that they are second-hand homes. The values will be renamed according to the terminology used in the U.S. real estate market."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data['condition'] = raw_data['condition'].fillna('Resale')\n",
+    "raw_data['condition'] = raw_data['condition'].replace({\n",
+    "    'segunda mano/buen estado': 'Resale', \n",
+    "    'segunda mano/para reformar': 'Fixer-upper', \n",
+    "    'promoción de obra nueva':'New'\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Resale', 'Fixer-upper', 'New'], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verifying\n",
+    "raw_data['condition'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**air_conditioner**  \n",
+    "No missing values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "air_conditioner\n",
+       "0    71158\n",
+       "1    22770\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,20 +1256,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "swimming_pool\n",
-       "0                76108\n",
-       "1                17820\n",
-       "swimming_pool        1\n",
+       "0    76108\n",
+       "1    17820\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,20 +1287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "storage_room\n",
-       "0               55859\n",
-       "1               38069\n",
-       "storage_room        1\n",
+       "0    55859\n",
+       "1    38069\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
