--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1219,6 +1219,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**garage**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['plaza de garaje incluida en el precio', nan,\n",
+       "       'plaza de garaje por 15.000 eur adicionales',\n",
+       "       'plaza de garaje por 12.500 eur adicionales',\n",
+       "       'plaza de garaje por 23.000 eur adicionales'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_garage = raw_data['garage'].unique()\n",
+    "unique_garage[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variable contains 3 types of values:\n",
+    "- 'NaN'\n",
+    "- 'plaza de garaje incluida en el precio'\n",
+    "- 'plaza de garaje por \"x\" eur adicionales'\n",
+    "\n",
+    "The variable values are changed to:\n",
+    "- NaN to `Not Included`.\n",
+    "- 'plaza de garaje incluida en el precio' to `Included`.\n",
+    "- All occurrences of 'plaza de garaje por...' to `Separate Purchase`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data['garage'] = raw_data['garage'].fillna('Not Included')\n",
+    "raw_data['garage'] = raw_data['garage'].replace('plaza de garaje incluida en el precio', 'Included')\n",
+    "raw_data['garage'] = raw_data['garage'].replace(to_replace = r'^plaza de garaje por.*', value='Separate Purchase', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Included', 'Not Included', 'Separate Purchase'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verifiying ..\n",
+    "raw_data['garage'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**air_conditioner**  \n",
     "No missing values. "
    ]
