Verify_missing_values

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1297,6 +1297,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Verify the missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "air_conditioner    0\n",
+      "bath_num           0\n",
+      "chimney            0\n",
+      "condition          0\n",
+      "garage             0\n",
+      "garden             0\n",
+      "house_type         0\n",
+      "loc_city           0\n",
+      "loc_full           0\n",
+      "loc_zone           0\n",
+      "m2_real            0\n",
+      "price              0\n",
+      "room_num           0\n",
+      "storage_room       0\n",
+      "swimming_pool      0\n",
+      "terrace            0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_values = raw_data.isnull().sum().sort_values(ascending=False)\n",
+    "print(missing_values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformation of the Remaining Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**air_conditioner**  \n",
     "No missing values. "
    ]
