remove_text_no_missing_values

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1345,8 +1345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**air_conditioner**  \n",
-    "No missing values. "
+    "**air_conditioner**  "
    ]
   },
   {
@@ -1376,8 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**swimming_pool**  \n",
-    "No missing values."
+    "**swimming_pool**  "
    ]
   },
   {
@@ -1407,8 +1405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**storage_room**  \n",
-    "No missing values."
+    "**storage_room**  "
    ]
   },
   {
