variable_room_num

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1430,6 +1430,69 @@
    "source": [
     "raw_data['storage_room'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**room_num**  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['4', '3', '2', '7', '5', '1', '8', '13', 'sin habitación', '6',\n",
+       "       '9', '10', '15', '12', '30', '18', '35', '17', '14', '11', '16',\n",
+       "       '36', '84', '20', '22', '65', '24', '23', '32', '25', '34', '26',\n",
+       "       '56', '58', '73'], dtype=object)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['room_num'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace the value 'sin habitacion' with '0'\n",
+    "raw_data['room_num'] = raw_data['room_num'].replace('sin habitación', '0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the variable to the correct data type\n",
+    "raw_data['room_num'] = pd.to_numeric(raw_data['room_num'])\n",
+    "# Verifying\n",
+    "raw_data['room_num'].dtype"
+   ]
   }
  ],
  "metadata": {
