--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1522,6 +1522,36 @@
     "raw_data['price'] = raw_data['price'].astype(float)\n",
     "raw_data['price'].dtype"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**m2_real**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the variable to the correct data type\n",
+    "raw_data['m2_real'] = pd.to_numeric(raw_data['m2_real'])\n",
+    "# verifying\n",
+    "raw_data['m2_real'].dtype"
+   ]
   }
  ],
  "metadata": {
