variable_house_type

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1552,6 +1552,210 @@
     "# verifying\n",
     "raw_data['m2_real'].dtype"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**house_type**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "house_type\n",
+       "Piso                                       50206\n",
+       " Casa o chalet independiente               13032\n",
+       " Casa o chalet                              6411\n",
+       " Chalet adosado                             5937\n",
+       "Ático                                       3261\n",
+       " Casa de pueblo                             2977\n",
+       "Dúplex                                      2384\n",
+       " Chalet pareado                             2304\n",
+       " Finca rústica                              2254\n",
+       "Alquiler de Piso                            2232\n",
+       " Casa rural                                  925\n",
+       "Estudio                                      678\n",
+       "Casa rural                                   571\n",
+       " Caserón                                     147\n",
+       "Alquiler de Ático                            101\n",
+       " Masía                                       100\n",
+       "Alquiler de Dúplex                            72\n",
+       " Casa terrera                                 68\n",
+       "Alquiler de Casa o chalet independiente       61\n",
+       "Alquiler de Chalet adosado                    54\n",
+       " Cortijo                                      30\n",
+       "Alquiler de Estudio                           23\n",
+       " Palacio                                      18\n",
+       " Torre                                        18\n",
+       "Alquiler de Casa o chalet                     16\n",
+       "Alquiler de Chalet pareado                    15\n",
+       "Alquiler de Casa de pueblo                    11\n",
+       "Alquiler de Casa rural                         9\n",
+       " Castillo                                      8\n",
+       "Alquiler de Finca rústica                      4\n",
+       "Alquiler de Caserón                            1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['house_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove records referring to rentals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = r'^Alquiler.*'\n",
+    "alquiler_rows = raw_data[raw_data['house_type'].str.contains(pattern, regex=True)]\n",
+    "raw_data.drop(alquiler_rows.index, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "house_type\n",
+       "Piso                           50206\n",
+       "Casa o chalet independiente    13032\n",
+       "Casa o chalet                   6411\n",
+       "Chalet adosado                  5937\n",
+       "Ático                           3261\n",
+       "Casa de pueblo                  2977\n",
+       "Dúplex                          2384\n",
+       "Chalet pareado                  2304\n",
+       "Finca rústica                   2254\n",
+       "Casa rural                      1496\n",
+       "Estudio                          678\n",
+       "Caserón                          147\n",
+       "Masía                            100\n",
+       "Casa terrera                      68\n",
+       "Cortijo                           30\n",
+       "Palacio                           18\n",
+       "Torre                             18\n",
+       "Castillo                           8\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove spaces before and after strings\n",
+    "raw_data['house_type'] = raw_data['house_type'].str.strip()\n",
+    "# verifying\n",
+    "raw_data['house_type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change values to U.S. real estate market terminology:\n",
+    "\n",
+    "- **Piso**: Apartment\n",
+    "- **Casa o chalet independiente**: Single-Family Home\n",
+    "- **Casa o chalet**: Single-Family Home\n",
+    "- **Chalet adosado**: Townhouse\n",
+    "- **Ático** : Penthouse\n",
+    "- **Casa de pueblo**: Cottage\n",
+    "- **Dúplex**: Duplex\n",
+    "- **Chalet pareado**: Semi-Detached House\n",
+    "- **Finca rústica**: Farmhouse\n",
+    "- **Casa rural**: Rural House\n",
+    "- **Estudio**: Studio Apartment\n",
+    "- **Caserón**: Mansion\n",
+    "- **Masía**: Country House\n",
+    "- **Casa terrera**: Bungalow\n",
+    "- **Cortijo**: Ranch House\n",
+    "- **Torre**: Tower House\n",
+    "- **Palacio** : Palace\n",
+    "- **Castillo** : Castle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "house_type\n",
+       "Apartment              53467\n",
+       "Single-Family Home     19443\n",
+       "Townhouse               5937\n",
+       "Cottage                 2977\n",
+       "Duplex                  2384\n",
+       "Semi-Detached House     2304\n",
+       "Farmhouse               2254\n",
+       "Rural House             1496\n",
+       "Studio Apartment         678\n",
+       "Mansion                  147\n",
+       "Country House            100\n",
+       "Bungalow                  68\n",
+       "Ranch House               30\n",
+       "Palace                    18\n",
+       "Tower House               18\n",
+       "Castle                     8\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "house_type_dict = {\n",
+    "    'Piso': 'Apartment',\n",
+    "    'Casa o chalet independiente': 'Single-Family Home',\n",
+    "    'Casa o chalet': 'Single-Family Home',\n",
+    "    'Chalet adosado': 'Townhouse',\n",
+    "    'Ático': 'Apartment',\n",
+    "    'Casa de pueblo': 'Cottage',\n",
+    "    'Dúplex': 'Duplex',\n",
+    "    'Chalet pareado': 'Semi-Detached House',\n",
+    "    'Finca rústica': 'Farmhouse',\n",
+    "    'Casa rural': 'Rural House',\n",
+    "    'Estudio': 'Studio Apartment',\n",
+    "    'Caserón': 'Mansion',\n",
+    "    'Masía': 'Country House',\n",
+    "    'Casa terrera': 'Bungalow',\n",
+    "    'Cortijo': 'Ranch House',\n",
+    "    'Torre': 'Tower House',\n",
+    "    'Palacio': 'Palace',\n",
+    "    'Castillo': 'Castle'\n",
+    "}\n",
+    "raw_data['house_type'] = raw_data['house_type'].map(house_type_dict)\n",
+    "# Verifying\n",
+    "raw_data['house_type'].value_counts()"
+   ]
   }
  ],
  "metadata": {
