variable_bath_num

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1786,6 +1786,86 @@
     "# Verifying\n",
     "raw_data['house_type'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**bath_num**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bath_num\n",
+       "2            37095\n",
+       "1            34080\n",
+       "3            12044\n",
+       "4             4559\n",
+       "5             1661\n",
+       "6              690\n",
+       "sin baños      635\n",
+       "7              255\n",
+       "8              115\n",
+       "9               60\n",
+       "10              43\n",
+       "11              23\n",
+       "13              17\n",
+       "12              14\n",
+       "14              10\n",
+       "15               9\n",
+       "20               4\n",
+       "18               3\n",
+       "17               2\n",
+       "16               2\n",
+       "34               1\n",
+       "84               1\n",
+       "23               1\n",
+       "19               1\n",
+       "32               1\n",
+       "30               1\n",
+       "58               1\n",
+       "75               1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['bath_num'].value_counts().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2', '3', '1', '4', '7', '6', '15', '5', '0', '8', '10', '34',\n",
+       "       '11', '9', '14', '12', '13', '20', '84', '16', '19', '23', '32',\n",
+       "       '18', '17', '30', '58', '75'], dtype=object)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['bath_num'] = raw_data['bath_num'].replace('sin baños', '0')\n",
+    "# Verifying\n",
+    "raw_data['bath_num'].unique()"
+   ]
   }
  ],
  "metadata": {
