--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1465,6 +1465,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**terrace**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "terrace\n",
+       "0    47215\n",
+       "1    44114\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['terrace'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**room_num**  "
    ]
   },
