variable_loc_full

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1896,6 +1896,79 @@
     "# Verifying\n",
     "raw_data['bath_num'].unique()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**loc_full**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              La iglesia , Urcabustaiz , Zuya, Álava \n",
+       "1     la Union Plazatxoa, 8 , Legutiano , Zuya, Álava \n",
+       "2          Calle Etxaguen s/n , Aramaio , Zuya, Álava \n",
+       "3       CP 01449, 1449 CP , Urcabustaiz , Zuya, Álava \n",
+       "4     Calle Nueva Plaza, 9 , Urcabustaiz , Zuya, Ál...\n",
+       "Name: loc_full, dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['loc_full'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove the word 'Calle' to normalize addresses in preparation for geocoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0              La iglesia , Urcabustaiz , Zuya, Álava \n",
+       "1     la Union Plazatxoa, 8 , Legutiano , Zuya, Álava \n",
+       "2                Etxaguen s/n , Aramaio , Zuya, Álava \n",
+       "3       CP 01449, 1449 CP , Urcabustaiz , Zuya, Álava \n",
+       "4          Nueva Plaza, 9 , Urcabustaiz , Zuya, Álava \n",
+       "Name: loc_full, dtype: object"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['loc_full'] = raw_data['loc_full'].str.replace(r'\\b[Cc]alle\\b', '', regex=True)\n",
+    "# Verifiying\n",
+    "raw_data['loc_full'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data derivation"
+   ]
   }
  ],
  "metadata": {
