--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -1969,6 +1969,120 @@
    "source": [
     "### Data derivation"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To obtain coordinates and a well-constructed complete address, the geolocator requires the street, number, and city. If any information is inaccurate, it returns `None`. In cases where a record contains incorrect data and cannot be geolocated, we will attempt to use fewer details, such as the city and municipality. The geolocator will then return the coordinates of the city. Examples:\n",
+    "\n",
+    "The incorrect initial content is removed, leaving the remaining data (city and province):\n",
+    "- **CP 01449, 1449 CP, Urcabustaiz, Zuya, Álava**: `None`\n",
+    "- **Urcabustaiz, Zuya, Álava**: Urkabustaiz, Gorbeialdea, Araba/Álava, Euskadi, Spain, (42.9709057, -2.9186291298186964)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this case, we create a new column by combining the `loc_city` and `loc_zone` variables to use this data when it is not possible to geolocate using the `loc_full` variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Urcabustaiz, Zuya, Álava\n",
+       "1      Legutiano, Zuya, Álava\n",
+       "2        Aramaio, Zuya, Álava\n",
+       "3    Urcabustaiz, Zuya, Álava\n",
+       "4    Urcabustaiz, Zuya, Álava\n",
+       "Name: city_prov, dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data['city_prov'] = raw_data['loc_city'].str.cat(raw_data['loc_zone'], sep=', ')\n",
+    "raw_data['city_prov'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove the `loc_city` and `loc_zone` variables from the dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_data = raw_data.drop(columns=['loc_city', 'loc_zone'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Checks and Saving the Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 91329 entries, 0 to 99999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   air_conditioner  91329 non-null  object \n",
+      " 1   bath_num         91329 non-null  object \n",
+      " 2   chimney          91329 non-null  object \n",
+      " 3   condition        91329 non-null  object \n",
+      " 4   garage           91329 non-null  object \n",
+      " 5   garden           91329 non-null  object \n",
+      " 6   house_type       91329 non-null  object \n",
+      " 7   loc_full         91329 non-null  object \n",
+      " 8   m2_real          91329 non-null  int64  \n",
+      " 9   price            91329 non-null  float64\n",
+      " 10  room_num         91329 non-null  int64  \n",
+      " 11  storage_room     91329 non-null  object \n",
+      " 12  swimming_pool    91329 non-null  object \n",
+      " 13  terrace          91329 non-null  object \n",
+      " 14  city_prov        91329 non-null  object \n",
+      "dtypes: float64(1), int64(2), object(12)\n",
+      "memory usage: 11.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# raw_data.to_csv('data/clean_data.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
