save_dataframe_to_clean_data

--- a/Data-Analytics-Final-Portfolio-Project.ipynb
+++ b/Data-Analytics-Final-Portfolio-Project.ipynb
@@ -2081,7 +2081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# raw_data.to_csv('data/clean_data.csv', index=False)"
+    "raw_data.to_csv('data/clean_data.csv', index=False)"
    ]
   }
  ],
